--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,8 @@ LazyData: true
 RoxygenNote: 7.1.1
 URL: https://github.com/ThadlerK/AIMdb
 BugReports: https://github.com/ThadlerK/AIMdb/issues
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Language: en-US
