--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,22 @@
 Package: AIMdb
 Title: mng_AIMdb
 Version: 0.0.0.9000
-Authors@R: person('Thaddeus', 'Kühn', email = 'AUTHOR@MAIL.COM', role = c('cre', 'aut'))
-Description: An application for managing an OTU data base. You can upload new data, search for specific taxonomy data or plot the data.
+Authors@R: 
+    person("Thaddeus", "Kühn", , "AUTHOR@MAIL.COM", role = c("cre", "aut"))
+Description: An application for managing an OTU data base. You can upload
+    new data, search for specific taxonomy data or plot the data.
 License: MIT + file LICENSE
+URL: https://github.com/ThadlerK/AIMdb
+BugReports: https://github.com/ThadlerK/AIMdb/issues
 Imports: 
     config (>= 0.3.2),
     golem (>= 0.4.1),
     shiny (>= 1.8.0)
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.1.1
-URL: https://github.com/ThadlerK/AIMdb
-BugReports: https://github.com/ThadlerK/AIMdb/issues
 Suggests: 
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Encoding: UTF-8
 Language: en-US
+LazyData: true
+RoxygenNote: 7.3.1
