--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,19 @@ URL: https://github.com/ThadlerK/AIMdb
 BugReports: https://github.com/ThadlerK/AIMdb/issues
 Imports: 
     config (>= 0.3.2),
+    dplyr,
+    glue,
     golem (>= 0.4.1),
-    shiny (>= 1.8.0)
+    RSQLite,
+    scales,
+    shiny (>= 1.8.0),
+    shinyauthr,
+    shinydashboard,
+    shinyjs,
+    sodium
 Suggests: 
+    knitr,
+    rmarkdown,
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
