added search data module fixed some errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 export(run_app)
 import(RSQLite)
 import(dplyr)
+import(magrittr)
 import(plotly)
 import(shiny)
+import(shinydashboard)
 importFrom(DT,DTOutput)
 importFrom(DT,JS)
 importFrom(DT,datatable)
@@ -20,3 +22,6 @@ importFrom(readxl,read_excel)
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
+importFrom(tibble,rownames_to_column)
+importFrom(tidyr,pivot_longer)
+importFrom(utils,globalVariables)
