--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ Imports:
     golem (>= 0.4.1),
     magrittr,
     plotly,
+    readxl,
     RSQLite,
     scales,
     shiny (>= 1.8.0),
@@ -23,15 +24,19 @@ Imports:
     shinydashboard,
     shinyjs,
     shinyWidgets,
-    sodium
+    sodium,
+    tibble,
+    tidyr,
+    utils
 Suggests: 
     knitr,
     rmarkdown,
     spelling,
     testthat (>= 3.0.0)
+VignetteBuilder: 
+    knitr
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 LazyData: true
 RoxygenNote: 7.3.1
-VignetteBuilder: knitr
