--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ Imports:
     magrittr,
     plotly,
     readxl,
+    RPostgreSQL,
     RSQLite,
+    rstudioapi,
     scales,
     shiny (>= 1.8.0),
     shinyauthr,
