--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ import(dplyr)
 import(magrittr)
 import(plotly)
 import(shiny)
+import(shinyalert)
 import(shinydashboard)
 importFrom(DT,DTOutput)
 importFrom(DT,JS)
